# QuickJSON

./: .gitignore  README.md  setup.cfg
src/QuickJSON/: __init__.py  main.py
