[metadata]
name = QuickJSON-nicky
version = 0.0.1
author = nicky
author_email = nickychan3232@gmail.com
description = removing all the open(file, 'w') hassle from saving a simple json
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nicky5/QuickJSON
project_urls =
    Bug Tracker = https://github.com/Nicky5/QuickJSON/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src